apps/actual-budget/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget
  namespace: actual-budget
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik-forward-auth@kubernetescrd  # disabled
spec:
  tls:
    - hosts:
        - budget.liberispat.com
      secretName: liberispat-wildcard-tls
  rules:
    - host: budget.liberispat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actual-budget-actualbudget
                port:
                  number: 5006
